another fix for site overflowing

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,6 +1,7 @@
 .main {
 	background: #3DCB94;
 	text-align: center;
+	overflow: hidden;
 }
 .main #logo {
 	width: auto;
